add nav bar + update home page

--- a/frontend/src/app/users/users.component.html
+++ b/frontend/src/app/users/users.component.html
@@ -1,7 +1,11 @@
 
 <ng-container class="container">
 
-    <h2> Users list </h2>
+    <h1> Users list </h1>
+    <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="users">Users</a></li>
+      </ul> 
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z6">
     
     
